added agent space arch consolidation and tweak to dances design

--- a/mkdocs-core.yml
+++ b/mkdocs-core.yml
@@ -1,4 +1,6 @@
-site_name: MAP Developer Docs
+site_name: MAP Core Developer Docs
+docs_dir: docs
+site_dir: site/core
 
 theme:
   name: material
@@ -39,21 +41,9 @@ markdown_extensions:
 
 nav:
   - Home: index.md
-  - Mapp Developers:
-      # - Overview: mapp-dev/overview.md
-      # - Native Mapps: mapp-dev/native.md
-      # - Integrating Existing Apps: mapp-dev/integration.md
-      - Developers Guide to the MAP Rust-API: mapp-dev/rust-api-developers-guide.md
-      - Holon Data Loader Guide: mapp-dev/holon-data-loader-guide.md
-      - Holon Data Loader CLI Man Page: mapp-dev/holon-loader-man-page.md
-      - Tags to Memes: mapp-dev/tags_to_memes.md
-      - The MAP Extensibility Model: mapp-dev/extensibility-model.md
-      - Trust Channels : mapp-dev/trust-channel.md
-      - A Sovereign Content Distribution Architecture : map-content-distribution-arch.md
-  - Visualizer Developers: []
-      # - Overview: visualizers/overview.md
-      # - Visualizer API: visualizers/api.md
+
   - MAP Core:
+      - MAP On-Boarding Experience Design: core/map-onboarding-experience.md
       - Agent Spaces Architecture: core/agent-space-arch.md
       - Deployment Architecture: core/map-deployment-arch.md
       # - Storage & Spaces: core/storage.md
@@ -64,10 +54,12 @@ nav:
       - Dances Design Spec: core/dances-design.md
       - Capsulization Strategy: core/capsulization.md
       - Trust Channel Design Spec: core/trust-channel-design-spec.md
+      - Trust Channel Entry Points Architecture: core/trust-channel-entry-points.md
       - Holon Loader Spec: core/holon-data-loader-design-spec.md
       - Meta-Value Import Guide: core/meta-value-types-import-guide.md
       - Internationalization Design Spec: core/i18n-design-spec.md
-      - Workspace Structure and WASM Guidelines: core/wasm-crate-guidelines.md
+      - Old Workspace Structure and WASM Guidelines: core/wasm-crate-guidelines-v1.md
+
   - Shared Concepts: []
       # - Holons: shared/concepts/holons.md
       # - Ontology: shared/concepts/ontology.md
