--- a/mkdocs-core.yml
+++ b/mkdocs-core.yml
@@ -1,6 +1,7 @@
 site_name: MAP Core Developer Docs
 docs_dir: docs
 site_dir: site/core
+site_url: https://memetic-activation-platform.github.io/map-dev-docs/core/
 
 theme:
   name: material
