establish concepts section, initial TS SDK specs

--- a/mkdocs-core.yml
+++ b/mkdocs-core.yml
@@ -1,7 +1,7 @@
 site_name: MAP Core Developer Docs
 docs_dir: docs
 site_dir: site/core
-site_url: https://memetic-activation-platform.github.io/map-dev-docs/core/
+site_url: https://memetic-activation-platform.github.io/map-dev-docs/
 
 theme:
   name: material
@@ -41,15 +41,23 @@ markdown_extensions:
       base_path: docs
 
 nav:
-  - Home: index.md
+  - Home: core/index.md
+
+  - MAP Concepts:
+      - Agent Spaces: shared/map-concepts/agent-space.md
+      - Sovereign Data Sphere (SDS): shared/map-concepts/sovereign-data-sphere.md
+      - The Origin of Life in the MAP: shared/map-concepts/origin-of-life.md
+      - Onboarding Flow -- Putting Yourself on the MAP: shared/map-concepts/on-boarding.md
+      - The Evolution of Life in the MAP: shared/map-concepts/evolution-of-life.md
 
   - MAP Core:
-      - MAP On-Boarding Experience Design: core/map-onboarding-experience.md
+
       - Agent Spaces Architecture: core/agent-space-arch.md
       - Deployment Architecture: core/map-deployment-arch.md
       # - Storage & Spaces: core/storage.md
       # - Developer Tooling: core/tooling.md
       - MAP Type System: core/map-type-system-revised.md
+      - MAP TypeScript SDK and Supporting Components: core/map-ts-sdk-impl.md
       - MAP Transaction Model: core/transaction-model.md
       - On-Boarding Flow: core/on-boarding.md
       - Dances Design Spec: core/dances-design.md
@@ -61,7 +69,7 @@ nav:
       - Internationalization Design Spec: core/i18n-design-spec.md
       - Old Workspace Structure and WASM Guidelines: core/wasm-crate-guidelines-v1.md
 
-  - Shared Concepts: []
+  #- Shared Concepts: []
       # - Holons: shared/concepts/holons.md
       # - Ontology: shared/concepts/ontology.md
   - Glossary: shared/glossary.md
