--- a/mkdocs-dahn.yml
+++ b/mkdocs-dahn.yml
@@ -1,6 +1,6 @@
 site_name: MAP Dynamic Adaptive Holon Navigator Development
 docs_dir: docs
-site_dir: site/dahn
+site_dir: site
 site_url: https://memetic-activation-platform.github.io/map-dev-docs/dahn/
 
 
