--- a/mkdocs-glossary.yml
+++ b/mkdocs-glossary.yml
@@ -1,8 +1,7 @@
-site_name: MAP Dynamic Adaptive Holon Navigator Development
-docs_dir: docs/dahn
-site_dir: site/dahn
-site_url: https://memetic-activation-platform.github.io/map-dev-docs/dahn/
-
+site_name: MAP Glossary
+docs_dir: docs/glossary
+site_dir: site/glossary
+site_url: https://memetic-activation-platform.github.io/map-dev-docs/
 
 theme:
   name: material
@@ -42,13 +41,7 @@ markdown_extensions:
       base_path: docs
 
 nav:
-  - Home: index.md
-  - The Semantic Experience Architecture (SEA) Manifesto: sea-manifesto.md
-  - Dynamic Adaptive Holon Navigator (DAHN):
-      - DAHN Project Brief: dahn-project-brief.md
-      - Dynamic Experience Composition: dynamic-experience-composition.md
-      - DAHN Implementation Plan: dahn-implementation-plan.md
+  - Home: glossary.md
 
-  #- Visualizer Developers: []
-      # - Overview: visualizers/overview.md
-      # - Visualizer API: visualizers/api.md
+
+
