--- a/mkdocs-mapp-dev.yml
+++ b/mkdocs-mapp-dev.yml
@@ -1,5 +1,5 @@
 site_name: MAP Application Developer Docs
-docs_dir: docs
+docs_dir: docs/mapp-dev
 site_dir: site/mapp-dev
 site_url: https://memetic-activation-platform.github.io/map-dev-docs/mapp-dev/
 
