--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -31,6 +31,7 @@ jobs:
           mkdocs build -f mkdocs-mapp-dev.yml
           mkdocs build -f mkdocs-core.yml
           mkdocs build -f mkdocs-dahn.yml
+          mkdocs build -f mkdocs-glossary.yml
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
